@@ -1,66 +1,173 @@
 # Google Java Format
 
 ## 概要
-Google Java Format は、開発ツール で活用される代表的なツールである。要件整理から運用定着までの一連の作業を効率化し、成果物の品質と再現性を高める目的で利用する。
 
-## 主な特徴
-| 項目 | 内容 |
-|------|------|
-| 適用範囲 | 導入工程で使う主要機能を一通り備える |
-| 導入対象 | 個人開発からチーム開発まで対応 |
-| 連携 | 周辺ツールと連携しやすい |
-| 運用 | 手順標準化と再現性向上に有効 |
-
-## 料金
-- 無料
-
-## メリット
-- 作業手順を標準化しやすい
-- チーム内でのレビュー観点を揃えやすい
-- 継続運用に必要な再現性を確保しやすい
-- 他ツール連携により自動化範囲を広げやすい
-
-## デメリット
-- 導入初期に設計方針と運用ルールの整備が必要である
-- 既存フローとの調整に一定の移行コストがかかる
-- 運用定着までに教育とガイド整備が必要である
+Google Java Formatは、JavaソースコードをGoogle Java Style Guideに準拠した形式に自動整形するツールです。Blackと同様に「設定不要」の思想で設計されており、フォーマットオプションを意図的に提供しないことで、スタイル議論を完全に排除します。コマンドライン、Maven/Gradle、IntelliJ/Eclipse/VS Codeなど多様な実行方法をサポートしています。
 
 ## 主な機能
-| 機能 | 説明 |
-|------|------|
-| 基本機能 | 日次作業で使う主要機能を提供する |
-| 管理機能 | 設定、権限、履歴管理などの運用機能を提供する |
-| 連携機能 | CI/CD、課題管理、監視など外部連携を提供する |
-| 可視化機能 | 状況把握やレビューに必要な可視化を支援する |
 
-## インストールとセットアップ
-公式URL:
-- [Google Java Format](https://github.com/google/google-java-format)
+### 1. コードフォーマット
 
-## ユースケース
-| ユースケース | 目的 | 活用内容 |
-|-------------|------|----------|
-| PoC導入 | 短期間で適用可否を確認する | 最小構成で導入し、評価観点を明確化する |
-| 本導入 | チーム標準として運用する | 共通設定、ルール、レビュー観点を整備する |
-| CI/CD連携 | 継続的な品質確認を自動化する | パイプライン連携と失敗時通知を実装する |
-| 運用改善 | 継続的に改善する | 指標を定点観測し、運用手順を更新する |
+- **Google Java Style準拠**: Google Java Style Guideに完全準拠した整形
+- **AOSP Style対応**: `--aosp-style` でAndroid Open Source Projectスタイルにも対応
+- **部分フォーマット**: 指定行・指定オフセットのみの整形が可能
+- **ファイル全体**: ファイル全体の一括フォーマット
 
-## ベストプラクティス
-- 適用対象、責任分担、完了基準を先に定義する
-- 環境差分は設定ファイルで管理し、手作業を減らす
-- レビュー観点をチェックリスト化して定着させる
-- 導入後は指標を定点観測し、運用ルールを更新する
+### 2. 実行方法
 
-## トラブルシューティング
-| 問題 | 主な原因 | 対応 |
-|------|----------|------|
-| 設定反映が不一致 | 環境差分や設定漏れ | 設定差分を比較し、適用順序を統一する |
-| 連携処理が失敗する | 認証情報や接続先設定の不一致 | 認証情報、URL、権限設定を再確認する |
-| 実行結果が不安定 | バージョン差異、依存関係の変化 | バージョン固定と依存関係の更新手順を整備する |
-| 運用負荷が高い | 手作業と例外処理が多い | 自動化対象を拡張し、例外処理を標準化する |
+- **コマンドライン**: JARファイルまたはGraalVMネイティブバイナリ
+- **Maven/Gradle**: ビルドプロセスに統合
+- **IntelliJ IDEA**: 公式プラグイン
+- **Eclipse**: ドロップインプラグイン
+- **VS Code**: google-java-format-for-vs-code拡張
 
-## 公式ドキュメント
-- [Google Java Format](https://github.com/google/google-java-format)
+### 3. 出力オプション
 
-## まとめ
-Google Java Format は、開発ツール の作業を標準化し、品質と再現性を高めるための有効な選択肢である。導入時は適用範囲を明確化し、運用ルールとレビュー基準を先に整備することが重要である。
+- **標準出力**: デフォルトで標準出力に結果を出力
+- **インプレース**: `--replace` でファイルを直接書き換え
+- **差分確認**: `--set-exit-if-changed` でCI向けチェック
+- **ドライラン**: `--dry-run` で変更があるファイルの一覧表示
+
+## 利用方法
+
+### インストール
+
+```bash
+# Homebrew
+brew install google-java-format
+
+# JARダウンロード（GitHubリリースページから）
+# https://github.com/google/google-java-format/releases
+wget https://github.com/google/google-java-format/releases/download/v1.25.2/google-java-format-1.25.2-all-deps.jar
+
+# GraalVMネイティブバイナリ（JVMフラグ不要）
+# リリースページからプラットフォーム別バイナリをダウンロード
+```
+
+### コマンドライン実行
+
+```bash
+# 単一ファイルのフォーマット（標準出力）
+java -jar google-java-format-1.25.2-all-deps.jar MyClass.java
+
+# ファイルを直接書き換え
+java -jar google-java-format-1.25.2-all-deps.jar --replace MyClass.java
+
+# 複数ファイル
+java -jar google-java-format-1.25.2-all-deps.jar --replace src/main/java/**/*.java
+
+# AOSPスタイル
+java -jar google-java-format-1.25.2-all-deps.jar --aosp-style --replace MyClass.java
+
+# CIチェック（変更があれば非ゼロ終了）
+java -jar google-java-format-1.25.2-all-deps.jar --set-exit-if-changed --dry-run MyClass.java
+```
+
+### Maven統合
+
+```xml
+<!-- pom.xml -->
+<build>
+  <plugins>
+    <plugin>
+      <groupId>com.spotify.fmt</groupId>
+      <artifactId>fmt-maven-plugin</artifactId>
+      <version>2.25</version>
+      <executions>
+        <execution>
+          <goals>
+            <goal>format</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+  </plugins>
+</build>
+```
+
+### Gradle統合
+
+```groovy
+// build.gradle
+plugins {
+    id 'com.github.sherter.google-java-format' version '0.9'
+}
+
+googleJavaFormat {
+    toolVersion = '1.25.2'
+}
+```
+
+### CI/CD統合
+
+```yaml
+# .github/workflows/format-check.yml
+name: Format Check
+
+on: [push, pull_request]
+
+jobs:
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+      - uses: axel-op/googlejavaformat-action@v3
+        with:
+          args: "--set-exit-if-changed"
+```
+
+## エディション・料金
+
+| エディション | 価格 | 特徴 |
+|-------------|------|------|
+| **Google Java Format** | 無料 | オープンソース、Apache License 2.0 |
+
+## メリット
+
+1. **ゼロコンフィグ**: 設定オプションがないため議論が不要
+2. **Google Java Style準拠**: 広く採用されているスタイルガイドに準拠
+3. **IDE統合**: IntelliJ、Eclipse、VS Codeをサポート
+4. **ネイティブバイナリ**: GraalVMビルドでJVMフラグ不要
+5. **部分フォーマット**: 指定行のみの整形が可能
+6. **ビルドツール統合**: Maven/Gradleプラグインで自動実行
+
+## デメリット
+
+1. **カスタマイズ不可**: スタイルオプションが一切ない（設計方針）
+2. **Google Style限定**: Google Java Style以外のスタイルには非対応（AOSPを除く）
+3. **JDK 21必須**: 実行にJDK 21以上が必要
+4. **既存コード影響**: 導入時に大量のフォーマット差分が発生
+5. **JVMフラグ**: JAR版はJava 16+で`--add-exports`フラグが必要
+
+## 代替ツール
+
+| ツール | 特徴 | 比較 |
+|--------|------|------|
+| **Checkstyle** | スタイルチェッカー | フォーマットではなく違反検出 |
+| **Eclipse Formatter** | Eclipse内蔵フォーマッター | カスタマイズ性が高い |
+| **IntelliJ Formatter** | IntelliJ内蔵フォーマッター | IDE依存だが柔軟 |
+| **Spotless** | マルチ言語フォーマッター | google-java-formatをバックエンドとして利用可能 |
+
+## 公式リンク
+
+- **GitHub**: [https://github.com/google/google-java-format](https://github.com/google/google-java-format)
+- **リリース**: [https://github.com/google/google-java-format/releases](https://github.com/google/google-java-format/releases)
+- **IntelliJプラグイン**: [https://plugins.jetbrains.com/plugin/8527-google-java-format](https://plugins.jetbrains.com/plugin/8527-google-java-format)
+- **Google Java Style Guide**: [https://google.github.io/styleguide/javaguide.html](https://google.github.io/styleguide/javaguide.html)
+
+## 関連ドキュメント
+
+- [Checkstyle](./Checkstyle.md)
+- [SpotBugs](./SpotBugs.md)
+- [ESLint](./ESLint.md)
+
+---
+
+**カテゴリ**: 開発ツール
+**対象工程**: 実装
+**最終更新**: 2025年12月
+**ドキュメントバージョン**: 1.0
